# bot-marley

./: .env  .gitignore  BOT_USAGE.md  CALCULATION_FIX.md  Cargo.toml  ERROR_HANDLING_IMPROVEMENTS.md  PERSISTENCE_SYSTEM.md  PRICE_TOOL_IMPROVEMENTS.md  README.md  TECHNICAL_INDICATORS_GUIDE.md  XRPBTC_PRICE_FIX.md  demo_trading_state.json
.codanna/index/tantivy/: meta.json
crates/mono-ai/: Cargo.toml
crates/mono-ai/macros/src/: lib.rs
crates/mono-ai/src/core/: tool.rs
crates/mono-ai/src/mono/: client.rs
crates/mono-ai/src/providers/: mod.rs
data/: trading_state.json  transactions.jsonl  transactions_example.jsonl
docs/: MACD_ALIGNMENT_GUIDE.md  README_DATA_COLLECTOR.md
examples/: persistence_demo.rs  simple_bot_usage.rs  test_error_handling.rs  test_transactions.rs  test_web_server.rs
logs/: botmarley.log.2025-09-30-20  botmarley.log.2025-09-30-21  botmarley.log.2025-09-30-22  botmarley.log.2025-09-30-23  botmarley.log.2025-10-01-00  botmarley.log.2025-10-01-01  botmarley.log.2025-10-01-02  botmarley.log.2025-10-01-03  botmarley.log.2025-10-01-04  botmarley.log.2025-10-01-05  botmarley.log.2025-10-01-06  botmarley.log.2025-10-01-07  botmarley.log.2025-10-01-08  botmarley.log.2025-10-01-09
logs_md/: 2025-10-02_12-22.md  2025-10-02_12-25.md  2025-10-02_12-32.md  2025-10-02_12-36.md  2025-10-02_12-39.md  2025-10-02_12-41.md  2025-10-02_12-44.md  2025-10-02_12-47.md
src/: binance_client.rs  bot.rs  config.rs  lib.rs  logging.rs  main.rs  persistence.rs  persistence_test.rs  portfolio.rs  symbol.rs  transaction_tracker.rs  web_server.rs
src/binance/: data_collector.rs  main_collector_runner.rs  mod.rs
src/bot/: klines.rs  mod.rs  prompt.rs  request.rs  system.rs
src/bot/indicators/: macd.rs  mod.rs
src/tools/: binance_trade.rs  get_prices.rs  mod.rs
src/tools/indicators/: atr.rs  bollinger_bands.rs  macd.rs  mod.rs  moving_averages.rs  rsi.rs  stochastic.rs  volume_indicators.rs
src/utils/: cryptonews.rs  date_to_timestamp.rs  mod.rs  to_precision.rs
static/: index.html
(+3 files in other folders)
