[package]
name = "botmarley"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
binance = "0.21.2"
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smart-default = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["chrono", "parking_lot", "tracing", "env-filter", "json", "valuable"] }
schemars = { version = "1.0", default-features = false}
# ai-types = "0.2.0"
mono-ai = {path = "crates/mono-ai"}
mono-ai-macros = {path = "crates/mono-ai/macros"}
reqwest = { version = "0.12.19", features = ["json",  "blocking","rustls-tls"] }
futures-util = "0.3.31"
